Fix logic such that pane icons are hidden when tree is collapsed

--- a/src/ui/layout/pane.scss
+++ b/src/ui/layout/pane.scss
@@ -78,11 +78,6 @@
     &.l-pane--collapsed {
       padding-left: 0 !important;
       padding-right: 0 !important;
-      body.mobile & {
-        .l-shell__sync-tree-button .l-shell__reset-tree-button{
-          display: none !important;
-        }
-      }
     }
   }
 
@@ -386,7 +381,6 @@
 body.mobile {
   .l-pane__header{
     > * {
-      display: block !important;
       @include ellipsize();
       @include userSelectNone();
       text-transform: uppercase;
